Updates from Overleaf

--- a/macros/from_ptr_definitions.tex
+++ b/macros/from_ptr_definitions.tex
@@ -7,9 +7,9 @@
 \providecommand {\NA}{\ensuremath{\text{---}}}    % for Not applicable (or available). Needs to be renewcommanded for APS to \cdots
 
 % some terms whose definition we may change
-\newcommand {\Lone}{Level-1\xspace} % Level-1 or L1 ?
-\newcommand {\Ltwo}{Level-2\xspace}
-\newcommand {\Lthree}{Level-3\xspace}
+%\newcommand {\Lone}{Level-1\xspace} % Level-1 or L1 ?
+%\newcommand {\Ltwo}{Level-2\xspace}
+%\newcommand {\Lthree}{Level-3\xspace}
 
 % Some software programs (alphabetized)
 \newcommand{\ACERMC} {\textsc{AcerMC}\xspace}
@@ -26,17 +26,17 @@
 \newcommand{\EVTGEN} {{\textsc{evtgen}}\xspace}
 \newcommand{\FAMOS} {{\textsc{famos}}\xspace}
 \newcommand{\FASTJET} {{\textsc{FastJet}}\xspace}
-\newcommand{\FEWZ} {{\textsc{fewz}}\xspace}
+%\newcommand{\FEWZ} {{\textsc{fewz}}\xspace}
 \newcommand{\GARCON} {\textsc{garcon}\xspace}
 \newcommand{\GARFIELD} {{\textsc{garfield}}\xspace}
 \newcommand{\GEANE} {{\textsc{geane}}\xspace}
-\newcommand{\GEANTfour} {{\textsc{Geant4}}\xspace}
+%\newcommand{\GEANTfour} {{\textsc{Geant4}}\xspace}
 \newcommand{\GEANTthree} {{\textsc{geant3}}\xspace}
 \newcommand{\GEANT} {{\textsc{geant}}\xspace}
 \newcommand{\HDECAY} {\textsc{hdecay}\xspace}
 \newcommand{\HERWIG} {{\textsc{herwig}}\xspace}
 \newcommand{\HERWIGpp} {{\textsc{herwig++}}\xspace}
-\newcommand{\POWHEG} {{\textsc{powheg}}\xspace}
+%\newcommand{\POWHEG} {{\textsc{powheg}}\xspace}
 \newcommand{\HIGLU} {{\textsc{higlu}}\xspace}
 \newcommand{\HIJING} {{\textsc{hijing}}\xspace}
 \newcommand{\HYDJET} {{\textsc{hydjet}}\xspace}
@@ -46,7 +46,7 @@
 \newcommand{\ISASUGRA} {{\textsc{isasugra}}\xspace}
 \newcommand{\ISASUSY} {{\textsc{isasusy}}\xspace}
 \newcommand{\ISAWIG} {{\textsc{isawig}}\xspace}
-\newcommand{\MADGRAPH} {\textsc{MadGraph}\xspace}
+%\newcommand{\MADGRAPH} {\textsc{MadGraph}\xspace}
 \newcommand{\MCATNLO} {\textsc{mc@nlo}\xspace}
 \newcommand{\MCFM} {\textsc{mcfm}\xspace}
 \newcommand{\MILLEPEDE} {{\textsc{millepede}}\xspace}
@@ -54,7 +54,7 @@
 \newcommand{\OSCAR} {{\textsc{oscar}}\xspace}
 \newcommand{\PHOTOS} {\textsc{photos}\xspace}
 \newcommand{\PROSPINO} {\textsc{prospino}\xspace}
-\newcommand{\PYTHIA} {{\textsc{pythia}}\xspace}
+%\newcommand{\PYTHIA} {{\textsc{pythia}}\xspace}
 \newcommand{\SHERPA} {{\textsc{sherpa}}\xspace}
 \newcommand{\TAUOLA} {\textsc{tauola}\xspace}
 \newcommand{\TOPREX} {\textsc{TopReX}\xspace}
@@ -63,14 +63,14 @@
 
 
 %  Experiments
-\newcommand {\DZERO}{D0\xspace}     %etc.
+%\newcommand {\DZERO}{D0\xspace}     %etc.
 
 
 % Measurements and units...
 
 \newcommand{\de}{\ensuremath{^\circ}}
 \newcommand{\ten}[1]{\ensuremath{\times \text{10}^\text{#1}}}
-\newcommand{\unit}[1]{\ensuremath{\text{\,#1}}\xspace}
+%\newcommand{\unit}[1]{\ensuremath{\text{\,#1}}\xspace}
 \newcommand{\mum}{\ensuremath{\,\mu\text{m}}\xspace}
 \newcommand{\micron}{\ensuremath{\,\mu\text{m}}\xspace}
 \newcommand{\cm}{\ensuremath{\,\text{cm}}\xspace}
@@ -117,21 +117,21 @@
 % Physics symbols ...
 
 \newcommand{\PT}{\ensuremath{p_{\mathrm{T}}}\xspace}
-\newcommand{\pt}{\ensuremath{p_{\mathrm{T}}}\xspace}
-\newcommand{\ET}{\ensuremath{E_{\mathrm{T}}}\xspace}
+%\newcommand{\pt}{\ensuremath{p_{\mathrm{T}}}\xspace}
+%\newcommand{\ET}{\ensuremath{E_{\mathrm{T}}}\xspace}
 \newcommand{\HT}{\ensuremath{H_{\mathrm{T}}}\xspace}
 \newcommand{\mT}{\ensuremath{m_{\mathrm{T}}}\xspace}
 \newcommand{\mTii}{\ensuremath{m_{\mathrm{T2}}}\xspace}
-\newcommand{\et}{\ensuremath{E_{\mathrm{T}}}\xspace}
+%\newcommand{\et}{\ensuremath{E_{\mathrm{T}}}\xspace}
 \newcommand{\Em}{\ensuremath{E\hspace{-0.6em}/}\xspace}
 \newcommand{\Pm}{\ensuremath{p\hspace{-0.5em}/}\xspace}
 \newcommand{\PTm}{\ensuremath{{p}_\mathrm{T}\hspace{-1.02em}/\kern 0.5em}\xspace}
 \newcommand{\PTslash}{\PTm}
 \newcommand{\ETm}{\ensuremath{E_{\mathrm{T}}^{\text{miss}}}\xspace}
-\newcommand{\MET}{\ETm}
+%\newcommand{\MET}{\ETm}
 \newcommand{\ETmiss}{\ETm}
 \newcommand{\ptmiss}{\ensuremath{\pt^\text{miss}}\xspace}
-\newcommand{\ETslash}{\ensuremath{E_{\mathrm{T}}\hspace{-1.1em}/\kern0.45em}\xspace}
+%\newcommand{\ETslash}{\ensuremath{E_{\mathrm{T}}\hspace{-1.1em}/\kern0.45em}\xspace}
 \newcommand{\VEtmiss}{\ensuremath{{\vec E}_{\mathrm{T}}^{\text{miss}}}\xspace}
 \newcommand{\ptvec}{\ensuremath{{\vec p}_{\mathrm{T}}}\xspace}
 \newcommand{\ptvecmiss}{\ensuremath{{\vec p}_{\mathrm{T}}^{\kern1pt\text{miss}}}\xspace}
@@ -159,8 +159,8 @@
 % Particle names which track the italic/non-italic face convention
 \newcommand{\zp}{{\PZpr}\xspace} % plain Z'
 \newcommand{\JPsi}{{\PJGy}\xspace} % J/Psi (no mass)
-\newcommand{\Z}{{\PZ}\xspace} % plain Z (no superscript 0)
-\newcommand{\ttbar}{{\PQt{}\PAQt}\xspace} % t-tbar
+%\newcommand{\Z}{{\PZ}\xspace} % plain Z (no superscript 0)
+%\newcommand{\ttbar}{{\PQt{}\PAQt}\xspace} % t-tbar
 
 % Extensions for missing names in PENNAMES % note now has xspace, to match syntax in PENNAMES2
 \newcommand{\cPgn}{\PGn} % generic neutrino
@@ -199,7 +199,7 @@
 \providecommand{\PGUPnS}{\PGUP[nS]\xspace}% maps to \PGUP[nS]
 % for APS style tables
 \ifthenelse{\boolean{cms@external}}{%
-\newenvironment{scotch}[1]{\protect\centering\ruledtabular\tabular{#1}}{\endtabular\endruledtabular}
+\newenvironment{scotch}[1]{\protect\centering\ruledtabular\tabular{#1}}{\end%tabular\endruledtabular}
 }{
 \newenvironment{scotch}[1]{\protect\centering\tabular{#1}\hline}{\hline\endtabular}
 }
@@ -222,7 +222,7 @@
 \newcommand{\bbarc}{\PAQb{}\PQc\xspace}
 \newcommand{\bbbar}{\PQb{}\PAQb\xspace}
 \newcommand{\ccbar}{\PQc{}\PAQc\xspace}
-\newcommand{\qqbar}{\ensuremath{\PQq\PAQq}\xspace}
+%\newcommand{\qqbar}{\ensuremath{\PQq\PAQq}\xspace}
 \newcommand{\bspsiphi}{\ensuremath{\PBs \to \JPsi\, \PGf}\xspace}
 \newcommand{\EE}{\Pep{}\Pem\xspace}
 \newcommand{\MM}{\PGmp{}\PGmm\xspace}
