--- a/macros/math.tex
+++ b/macros/math.tex
@@ -4,8 +4,8 @@
 \newcommand{\SUthree}{\Group{SU}{3}{C}}
 \newcommand{\SUtwoL}{\Group{SU}{2}{L}}
 \newcommand{\SUtwo}{\Group{SU}{2}{}}
-\newcommand{\SUfive}{\Group{SU}{5}}
-\newcommand{\Oten}{\Group{O}{10}}
+\newcommand{\SUfive}{\Group{SU}{5}{}}
+\newcommand{\Oten}{\Group{O}{10}{}}
 \newcommand{\SUtwoR}{\Group{SU}{2}{R}}
 \newcommand{\SUlrs}{\ensuremath{\SUtwoR \times \SUtwoL \times \Uone}\xspace}
 \newcommand{\Uone}{\GroupShort{U}{1}}
@@ -13,6 +13,12 @@
 \newcommand{\SUthreeSUtwoUone}{\ensuremath{\SUthree \times \SUtwoUone}\xspace}
 
 \newcommand{\vminusa}{\ensuremath{V-A}\xspace}
+
+% Statistics
+\newcommand{\CL}{\ensuremath{\text{CL}}\xspace}
+\newcommand{\CLs}{\ensuremath{\text{CL}_\text{s}}\xspace}
+\newcommand{\CLsb}{\ensuremath{\text{CL}_\text{s+b}}\xspace}
+
 
 % Coordinates
 \newcommand{\Coord}[1]{\ensuremath{#1}\xspace}
