--- a/macros/particles.tex
+++ b/macros/particles.tex
@@ -60,7 +60,14 @@
 
 \newcommand{\WR}{\ParticleMath{W_{R}}}
 \newcommand{\NR}{\ParticleMath{N_{R}}}
+\newcommand{\WRNR}{\ParticleMath{W_{R}}--\ParticleMath{N_{R}}}
+\newcommand{\MWRNR}{\ensuremath{M_{\ParticleMath{W_{R}}}-M_{\ParticleMath{N_{R}}}}}
 \newcommand{\Zprime}{\Particle{Z'}}
+
+\newcommand{\ZPtoLL}{\ensuremath{\Zprime \to \xxbar{\lepton}{\lepton}}\xspace}
+\newcommand{\WRtoQQ}{\ensuremath{\WR \to \xxbar{\quark}{\quark '}}\xspace}
+\newcommand{\WRtoLN}{\ensuremath{\WR \to \xxbar{\lepton}{\neutrino}}\xspace}
+\newcommand{\WRtoTB}{\ensuremath{\WR \to \xxbar{\topquark}{\bottomquark}}\xspace}
 
 %% Photon
 \newcommand{\photon}{\ParticleMath{\ensuremath{\gamma}}}
@@ -99,6 +106,8 @@
 \newcommand{\higgs}{\Particle{H}}
 \newcommand{\higgstogammagamma}{\ensuremath{\higgs \to \photon \photon}\xspace}
 \newcommand{\higgstoZZ}{\ensuremath{\higgs \to \Z \Z}\xspace}
+\newcommand{\higgstobb}{\ensuremath{\higgs \to \xxbar{b}{b}}\xspace}
+\newcommand{\higgstoZZtollll}{\ensuremath{\higgs \to \Z \Z \to 4\ell}\xspace}
 
 % Backgrounds
 \newcommand{\ttbar}{\ensuremath{\topquark \tbar}\xspace}
