--- a/macros/variables.tex
+++ b/macros/variables.tex
@@ -4,6 +4,10 @@
 
 % Physics Variables
 
+%% Jets
+\newcommand{\antikt}{anti-\kt}
+\newcommand{\kt}{\Variable{k_{\mathrm{T}}}}
+
 %% Phistar (!!)
 \newcommand{\phistar}{\Variable{\phi^{*}}}
 \newcommand{\phistarSC}{\Variable{\phistar_{\text{SC}}}}
@@ -80,6 +84,10 @@
 \newcommand{\ProtonMass}{\Variable{m_{\proton}}}
 \newcommand{\mee}{\Variable{m_{\electron \electron}}}
 \newcommand{\mll}{\Variable{m_{\lepton\lepton}}}
+\newcommand{\mwr}{\Variable{m_{\WR}}}
+\newcommand{\mnr}{\Variable{m_{\NR}}}
+\newcommand{\mlljj}{\Variable{m_{lljj}}}
+\newcommand{\mlj}{\Variable{m_{lj}}}
 
 \newcommand{\MassRange}{\Variable{\SI{60}{\GeV} < \mee < \SI{120}{\GeV}}}
 
